--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
   ],
   "dependencies": {
     "bootstrap": "~3.3.5",
-    "underscore": "~1.8.3"
+    "underscore": "~1.8.3",
+    "Chart.js": "~1.0.2"
   }
 }
